crates/ullm-hip-sys/src/bindings.rs

// @generated by bindgen 0.71.1; checked in for reproducible normal builds.
// source: include/ullm/hip.h
// abi_version: 1
// options: --allowlist-type '^ullm_.*' --allowlist-function '^ullm_.*' --allowlist-var '^ULLM_.*' --no-layout-tests

use core::ffi::c_char;

pub type ullm_status_t = u32;

pub const ULLM_HIP_ABI_VERSION: u32 = 1;
pub const ULLM_HIP_LIBRARY_VERSION_MAJOR: u32 = 0;
pub const ULLM_HIP_LIBRARY_VERSION_MINOR: u32 = 1;
pub const ULLM_HIP_LIBRARY_VERSION_PATCH: u32 = 0;

pub const ULLM_STATUS_OK: ullm_status_t = 0;
pub const ULLM_STATUS_INVALID_ARGUMENT: ullm_status_t = 1;
pub const ULLM_STATUS_BUFFER_TOO_SMALL: ullm_status_t = 2;
pub const ULLM_STATUS_UNSUPPORTED: ullm_status_t = 3;
pub const ULLM_STATUS_HIP_UNAVAILABLE: ullm_status_t = 4;
pub const ULLM_STATUS_INVALID_ABI_VERSION: ullm_status_t = 5;
pub const ULLM_STATUS_RESERVED_NONZERO: ullm_status_t = 6;
pub const ULLM_STATUS_INTERNAL_ERROR: ullm_status_t = 7;

pub const ULLM_BACKEND_HIP: u32 = 1;

pub type ullm_access_mode_t = u32;

pub const ULLM_ACCESS_READ: ullm_access_mode_t = 1;
pub const ULLM_ACCESS_WRITE: ullm_access_mode_t = 2;
pub const ULLM_ACCESS_READ_WRITE: ullm_access_mode_t = 3;

#[repr(C)]
pub struct ullm_context_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct ullm_queue_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct ullm_buffer_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct ullm_event_t {
    _private: [u8; 0],
}

#[repr(C)]
pub struct ullm_completion_t {
    _private: [u8; 0],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct ullm_error_sink_t {
    pub struct_size: u32,
    pub abi_version: u32,
    pub message: *mut c_char,
    pub message_capacity: u64,
    pub message_length: u64,
    pub reserved: [u64; 2],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct ullm_version_info_t {
    pub struct_size: u32,
    pub abi_version: u32,
    pub major: u32,
    pub minor: u32,
    pub patch: u32,
    pub reserved: [u32; 3],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct ullm_backend_probe_result_t {
    pub struct_size: u32,
    pub abi_version: u32,
    pub backend: u32,
    pub available: u32,
    pub hip_runtime_present: u32,
    pub reserved: [u32; 3],
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct ullm_context_probe_result_t {
    pub struct_size: u32,
    pub abi_version: u32,
    pub context_present: u32,
    pub hip_available: u32,
    pub reserved: [u32; 4],
}

unsafe extern "C" {
    pub fn ullm_get_abi_version(
        abi_version: *mut u32,
        error_sink: *mut ullm_error_sink_t,
    ) -> ullm_status_t;
    pub fn ullm_query_version(
        version: *mut ullm_version_info_t,
        error_sink: *mut ullm_error_sink_t,
    ) -> ullm_status_t;
    pub fn ullm_backend_probe(
        backend: u32,
        result: *mut ullm_backend_probe_result_t,
        error_sink: *mut ullm_error_sink_t,
    ) -> ullm_status_t;
    pub fn ullm_context_probe(
        context: *const ullm_context_t,
        result: *mut ullm_context_probe_result_t,
        error_sink: *mut ullm_error_sink_t,
    ) -> ullm_status_t;
}
